--- a/src/components/Latest.css
+++ b/src/components/Latest.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .lastest {
     width: 100%;
     height: 220vh;
@@ -259,7 +263,18 @@
     height: 500px;
     cursor: pointer;
     transition: 1s;
+    overflow: hidden;
+    border: 1px solid;
+}
 
+.las_cart1 img {
+    width: 100%;
+    height: 100%;
+    transition: .5s;
+}
+
+.las_cart1:hover img {
+    transform: scale(1.1);
 }
 
 
@@ -271,9 +286,16 @@
     margin-top: 70px;
     transition: 1s;
     transform: scale(1);
-
+    overflow: hidden;
 }
 
+.las_cart2 img {
+    transition: .5s;
+}
+
+.las_cart2:hover img {
+    transform: scale(1.1);
+}
 
 
 @media(max-width:820px) {
