--- a/src/components/Latest/Latest.css
+++ b/src/components/Latest/Latest.css
@@ -1,10 +1,6 @@
-* {
-    box-sizing: border-box;
-}
-
 .lastest {
     width: 100%;
-    height: 220vh;
+    height: auto;
     background-color: #181B23;
 }
 
