--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -43,5 +43,5 @@
 .main1_half2 {
     width: 50%;
     height: 100%;
-    background-image: url("../../image/main1.svg");
+    background-image: url("../../images/main1.svg");
 }
