--- a/src/components/our/Our.css
+++ b/src/components/our/Our.css
@@ -1,10 +1,11 @@
 .main-our{
     width: 100%;
-    height: 540px;
+    height: 650px;
     background: #171922;
     display: flex;
     /* align-items: center; */
     justify-content: center;
+    position: relative;
 }
 .main-img{
     width: 80% !important;
@@ -25,7 +26,7 @@
     font-family: 'Larken-Regular';
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 50px;
     line-height: 77px;
     color: #ffffff;
 }
@@ -33,7 +34,7 @@
     font-family: 'Larken-Medium';
     font-style: normal;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 16px;
     line-height: 21px;
     text-align: center;
     letter-spacing: 0.3em;    
@@ -49,28 +50,28 @@
 }
 
 .img2-our{
-    width: 170px;
-    height: 320px;
+    width: 250px;
+    height: 400px;
     background: url("../../images/Rectangle\ 719.png")no-repeat center/cover;
     object-fit: cover;
 }
 .img3-our {
-    width: 170px;
-    height: 320px;
+    width: 280px;
+    height: 420px;
     background: url("../../images/Rectangle\ 720.png")no-repeat center/cover;
     transform: translateY(80px);
     object-fit: cover;
 }
 .img4-our {
-    width: 170px;
-    height: 320px;
+    width: 250px;
+    height: 420px;
     background: url("../../images/Rectangle\ 721.png")no-repeat center/cover;
     transform: translateY(80px);
     object-fit: cover;
 }
 .img5-our {
-    width: 170px;
-    height: 320px;
+    width: 250px;
+    height: 420px;
     background: url("../../images/Rectangle\ 722.png")no-repeat center/cover;
     object-fit: cover;
 }
@@ -81,8 +82,8 @@
     font-family: sans-serif;
     transform: translateY(90px);
     color: #12151E;
-    font-size: 70px;
-    top: 360px;
+    font-size: 100px;
+    top: 450px;
 }
 
 .swiper-our{
